[package]
name = "ckb-ultraplonk-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "On-chain UltraPlonk (Noir/Barretenberg) proof verifier for CKB-VM"

[dependencies]
ckb-std = "1.1"
ultraplonk-no-std = { git = "https://github.com/zkVerify/ultraplonk_verifier.git", tag = "v0.4.0", default-features = false }
